# sandbox

./: .gitignore  canvas_join.ipynb  pyproject.toml  scratch.ipynb  scratch_mesh_traversal.ipynb  tabpfn_custom.py  ts_to_vec.py
notebooks/: scratch.ipynb
notebooks/avtostrah/: morphology.ipynb  tiles.ipynb
scripts/: async_gen.py
