[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
]

[tool.mypy]
allow_redefinition = true

[[tool.mypy.overrides]]
module = [
    "sklearn.*",
    "catboost.*",
]
ignore_missing_imports = true

[project]
name = "sandbox"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "AndBoyS", email = "andboyxd@gmail.com" }
]
requires-python = ">=3.10"
dependencies = [
    "data-science-types>=0.2.23",
    "fuzzywuzzy[speedup]>=0.18.0",
    "jupyter>=1.1.1",
    "jupytext>=1.17.0",
    "matplotlib>=3.10.0",
    "mypy==1.13.0",
    "numpy~=1.0",
    "openpyxl>=3.1.5",
    "pandas>=2.2.3",
    "pandas-stubs>=2.2.3.241126",
    "ruff>=0.8.4",
    "scikit-learn==1.4.2",
    "tinytag>=2.1.1",
    "torch==2.2.0",
    "tqdm>=4.67.1",
    "types-tqdm>=4.67.0.20241221",
]
